--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -11,12 +11,18 @@
         android:layout_height="wrap_content"
         android:padding="16dp"
         android:orientation="vertical"
-        tools:ignore="MissingConstraints">
+        android:gravity="center"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16dp"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="#2196f3"
             android:text="Account Registration">
         </TextView>
 
@@ -68,7 +74,8 @@
             android:layout_height="wrap_content"
             android:textSize="16dp"
             android:id="@+id/registerButton"
-            android:text="Register">
+            android:text="Register"
+            android:backgroundTint="#2196f3">
         </Button>
 
         <TextView
