--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -66,6 +66,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:dropDownWidth="200dp"
+            android:entries="@array/ROLE_VALUES"
             android:id="@+id/roleSpinner">
         </Spinner>
 
