Firebase CRUD implementation

--- a/app/src/main/res/layout/activity_job_posting.xml
+++ b/app/src/main/res/layout/activity_job_posting.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    tools:context=".CreateJobPosting">
+    tools:context=".JobPostingActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -24,7 +24,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="24dp"
-                android:text="Create Job Posting"
+                android:text="@string/JOB_POSTING_ACTIVITY_TITLE"
                 android:textColor="#2196F3"
                 android:textSize="30sp"
                 android:textStyle="bold"
