--- a/app/src/main/res/layout/activity_employee.xml
+++ b/app/src/main/res/layout/activity_employee.xml
@@ -7,6 +7,16 @@
     android:layout_height="match_parent"
     tools:context=".EmployeeActivity">
 
+    <Button
+        android:id="@+id/logoutButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Logout"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp" />
+
     <TextView
         android:id="@+id/employeeText"
         android:layout_width="wrap_content"
