--- a/app/src/main/res/layout/activity_reset.xml
+++ b/app/src/main/res/layout/activity_reset.xml
@@ -5,14 +5,14 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PasswordReset">
+    tools:context=".ResetPasswordActivity">
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:padding="16dp"
         android:orientation="vertical"
-        android:gravity="center"
+        android:gravity="center_horizontal"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,30 +21,28 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="200dp"
+            android:textSize="30dp"
             android:textStyle="bold"
             android:textColor="#2196f3"
-            android:text="Reset Password">
-        </TextView>
+            android:text="Reset Password" />
 
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16dp"
+            android:layout_marginVertical="30dp"
             android:hint="email"
-            android:width="200dp"
-            android:id="@+id/emailBox">
-
-        </EditText>
+            android:ems="11"
+            android:id="@+id/resetEmailBox" />
 
         <Button
             android:id="@+id/sendButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16dp"
+            android:layout_marginVertical="30dp"
             android:text="Send Email"
             android:backgroundTint="#2196f3"/>
-
 
     </LinearLayout>
 
