Implemented UI for job application page and added apply button to job description

--- a/app/src/main/res/layout/activity_job_application.xml
+++ b/app/src/main/res/layout/activity_job_application.xml
@@ -7,10 +7,95 @@
     android:layout_height="match_parent"
     tools:context=".JobApplicationActivity">
 
-    <LinearLayout
-        android:layout_width="409dp"
-        android:layout_height="729dp"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp"/>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:orientation="vertical"
+            android:gravity="center_horizontal"
+            tools:ignore="MissingConstraints">
+
+            <TextView
+                android:id="@+id/ApplicationTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="50dp"
+                android:text="Application for [Job]"
+                android:textColor="#2196F3"
+                android:textSize="30dp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/applicationNameBox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="24dp"
+                android:hint="Name"
+                android:ems="11" />
+
+            <EditText
+                android:id="@+id/applicationPhoneBox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="24dp"
+                android:hint="Phone"
+                android:ems="11" />
+
+            <EditText
+                android:id="@+id/applicationEmailBox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="24dp"
+                android:hint="Email"
+                android:ems="11" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" >
+                <Button
+                    android:id="@+id/resumeUploadButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="24dp"
+                    android:layout_marginHorizontal="10dp"
+                    android:ems="11"
+                    android:text="Upload Resume"
+                    android:backgroundTint="#2196f3" />
+
+                <TextView
+                    android:id="@+id/fileNameTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="24dp"
+                    android:layout_marginHorizontal="10dp"
+                    android:t
+                    android:text="No file selected" />
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/applicationSubmitButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="24dp"
+                android:ems="11"
+                android:text="Submit"
+                android:backgroundTint="#2196f3" />
+
+            <TextView
+                android:id="@+id/applicationStatusLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="24dp"
+                android:animateLayoutChanges="true"
+                android:text="Status!"
+                android:textColor="#D90317"
+                android:textStyle="italic" />
+
+        </LinearLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
