--- a/app/src/main/res/layout/activity_job_application.xml
+++ b/app/src/main/res/layout/activity_job_application.xml
@@ -27,7 +27,7 @@
                 android:layout_marginBottom="50dp"
                 android:text="Application for [Job]"
                 android:textColor="#2196F3"
-                android:textSize="30dp"
+                android:textSize="30sp"
                 android:textStyle="bold" />
 
             <EditText
@@ -35,6 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="24dp"
+                android:inputType="text"
                 android:hint="Name"
                 android:ems="11" />
 
@@ -43,6 +44,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="24dp"
+                android:inputType="phone"
                 android:hint="Phone"
                 android:ems="11" />
 
@@ -51,6 +53,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="24dp"
+                android:inputType="textEmailAddress"
                 android:hint="Email"
                 android:ems="11" />
 
@@ -63,9 +66,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginVertical="24dp"
                     android:layout_marginHorizontal="10dp"
-                    android:ems="11"
+                    android:padding="10dp"
                     android:text="Upload Resume"
-                    android:backgroundTint="#2196f3" />
+                    android:textColor="#757575"
+                    android:backgroundTint="#D3E0EA"
+                    app:cornerRadius="0dp" />
 
                 <TextView
                     android:id="@+id/fileNameTextView"
@@ -73,7 +78,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginVertical="24dp"
                     android:layout_marginHorizontal="10dp"
-                    android:t
+                    android:textColor="#757575"
                     android:text="No file selected" />
             </LinearLayout>
 
@@ -95,7 +100,6 @@
                 android:text="Status!"
                 android:textColor="#D90317"
                 android:textStyle="italic" />
-
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
