--- a/app/src/main/res/layout/activity_job_details_view.xml
+++ b/app/src/main/res/layout/activity_job_details_view.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -212,6 +213,17 @@
                     android:text="October 10, 2024"
                     android:layout_weight="2" />
             </LinearLayout>
+
+            <Button
+                android:id="@+id/applyButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:backgroundTint="#2196F3"
+                android:text="Apply"
+                android:visibility="gone" />
         </LinearLayout>
     </ScrollView>
 
