added job applicants page and job applicant items

--- a/app/src/main/res/layout/activity_job_details_view.xml
+++ b/app/src/main/res/layout/activity_job_details_view.xml
@@ -16,6 +16,18 @@
             android:orientation="vertical"
             android:padding="15dp">
 
+            <!-- view applicants button -->
+            <Button
+                android:id="@+id/viewApplicantsButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                android:backgroundTint="#2196F3"
+                android:text="View Applicants"
+                android:textColor="#FFFFFF"
+                android:textSize="16sp" />
+
             <!-- Title Bar with Job ID and Job Title -->
             <!-- Concatenate title and id -->
             <TextView
