--- a/app/src/main/res/layout/applicant_item_view.xml
+++ b/app/src/main/res/layout/applicant_item_view.xml
@@ -29,7 +29,7 @@
             android:textColor="#757575" />
 
         <TextView
-            android:id="@+id/experienceLevel"
+            android:id="@+id/applicantExperience"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="2dp"
