Implemented code to validate fields and attach a resume. Also refactored some classes to merge them and remove redundancies

--- a/app/src/main/res/layout/activity_job_posting.xml
+++ b/app/src/main/res/layout/activity_job_posting.xml
@@ -24,7 +24,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="24dp"
-                android:text="@string/JOB_POSTING_ACTIVITY_TITLE"
+                android:text="Create Job Posting"
                 android:textColor="#2196F3"
                 android:textSize="30sp"
                 android:textStyle="bold"
@@ -51,6 +51,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="16dp"
+                android:inputType="text"
                 android:hint="Job Title"
                 app:layout_constraintBottom_toTopOf="@+id/jobDescriptionBox"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -100,6 +101,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="16dp"
+                android:inputType="text"
                 android:hint="Job Industry (e.g. Technology)"
                 app:layout_constraintBottom_toTopOf="@+id/jobLocationBox"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -111,6 +113,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="16dp"
+                android:inputType="text"
                 android:hint="City, Province, Country"
                 app:layout_constraintBottom_toTopOf="@+id/submitButton"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -135,7 +138,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:text="Status message!"
                 android:animateLayoutChanges="true"
                 android:textColor="#D90317"
                 android:textStyle="italic"
