--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -33,6 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="24dp"
+                android:inputType="text"
                 android:hint="Name"
                 android:ems="11" />
 
@@ -41,6 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="24dp"
+                android:inputType="phone"
                 android:hint="Phone"
                 android:ems="11" />
 
@@ -49,6 +51,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="24dp"
+                android:inputType="textEmailAddress"
                 android:hint="Email"
                 android:ems="11" />
 
@@ -57,6 +60,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="24dp"
+                android:inputType="textPassword"
                 android:hint="Password"
                 android:ems="11" />
 
