--- a/app/src/main/res/layout/activity_reset.xml
+++ b/app/src/main/res/layout/activity_reset.xml
@@ -32,6 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="30dp"
+            android:inputType="textEmailAddress"
             android:hint="email"
             android:ems="11"
             android:id="@+id/resetEmailBox" />
