--- a/app/src/main/res/layout/applicant_item_view.xml
+++ b/app/src/main/res/layout/applicant_item_view.xml
@@ -29,11 +29,11 @@
             android:textColor="#757575" />
 
         <TextView
-            android:id="@+id/applicantExperience"
+            android:id="@+id/applicantPhone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="2dp"
-            android:text="Experience Level: no experience"
+            android:text="Phone: 1234567890"
             android:textColor="#757575" />
 
         <Button
