--- a/app/src/main/res/layout/activity_employee_applications.xml
+++ b/app/src/main/res/layout/activity_employee_applications.xml
@@ -30,7 +30,7 @@
                     android:id="@+id/availableJobsTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Available Jobs"
+                    android:text="My Applications"
                     android:textColor="#2196F3"
                     android:textSize="30sp"
                     android:textStyle="bold"
@@ -73,17 +73,17 @@
                 android:layout_marginTop="16dp">
 
                 <Button
-                    android:id="@+id/applicationStatusButton"
+                    android:id="@+id/shortlistedButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Application Status"
+                    android:text="Shortlisted"
                     android:layout_marginEnd="8dp" />
 
                 <Button
-                    android:id="@+id/logoutButton"
+                    android:id="@+id/dashboardButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Logout" />
+                    android:text="Return to Dashboard" />
 
             </LinearLayout>
 
